// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox matches wrapper snapshot: wrapper mount 1`] = `
.emotion-7 {
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 10px;
  }
}

.emotion-5 {
  display: block;
  position: relative;
  min-height: 40px;
  margin-bottom: 10px;
  padding: 0 0 0 40px;
  clear: left;
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 10px;
  }
}

.emotion-0 {
  position: absolute;
  left: 0;
  top: 0;
  width: 40px;
  height: 40px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
  cursor: pointer;
}

.emotion-0:checked + span:after {
  opacity: 1;
}

.emotion-0:focus + span:before {
  outline: 3px solid transparent;
  outline-offset: 3px;
  box-shadow: 0 0 0 3px #ffbf47;
}

.emotion-0 + span {
  opacity: 1;
  pointer-events: auto;
}

.emotion-2 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 15px 5px;
  display: inline-block;
  color: #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-2 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-2::before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 40px;
  height: 40px;
  border: 2px solid #0b0c0c;
  background: transparent;
}

.emotion-2::after {
  content: '';
  position: absolute;
  top: 11px;
  left: 9px;
  width: 18px;
  height: 7px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  border: solid;
  border-width: 0 0 5px 5px;
  border-top-color: transparent;
  background: transparent;
  zoom: 1;
  opacity: 0;
}

<StyledHoc>
  <Checkbox
    className="emotion-7 emotion-4"
  >
    <StyledCheckbox
      className="emotion-7 emotion-4"
    >
      <label
        className="emotion-4 emotion-5 emotion-6"
      >
        <StyledInput
          type="checkbox"
        >
          <input
            className="emotion-0 emotion-1"
            type="checkbox"
          />
        </StyledInput>
        <StyledLabel>
          <span
            className="emotion-2 emotion-3"
          >
            example
          </span>
        </StyledLabel>
      </label>
    </StyledCheckbox>
  </Checkbox>
</StyledHoc>
`;

exports[`Checkbox renders disabled checkbox: disabled 1`] = `
.emotion-7 {
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 10px;
  }
}

.emotion-5 {
  display: block;
  position: relative;
  min-height: 40px;
  margin-bottom: 10px;
  padding: 0 0 0 40px;
  clear: left;
  margin-bottom: 10px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    margin-bottom: 10px;
  }
}

.emotion-2 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 15px 5px;
  display: inline-block;
  color: #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-2 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-2::before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 40px;
  height: 40px;
  border: 2px solid #0b0c0c;
  background: transparent;
}

.emotion-2::after {
  content: '';
  position: absolute;
  top: 11px;
  left: 9px;
  width: 18px;
  height: 7px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  border: solid;
  border-width: 0 0 5px 5px;
  border-top-color: transparent;
  background: transparent;
  zoom: 1;
  opacity: 0;
}

.emotion-0 {
  position: absolute;
  left: 0;
  top: 0;
  width: 40px;
  height: 40px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
  cursor: auto;
}

.emotion-0:checked + span:after {
  opacity: 1;
}

.emotion-0:focus + span:before {
  outline: 3px solid transparent;
  outline-offset: 3px;
  box-shadow: 0 0 0 3px #ffbf47;
}

.emotion-0 + span {
  opacity: .4;
  pointer-events: none;
}

<StyledHoc
  disabled={true}
>
  <Checkbox
    className="emotion-7 emotion-4"
    disabled={true}
  >
    <StyledCheckbox
      className="emotion-7 emotion-4"
    >
      <label
        className="emotion-4 emotion-5 emotion-6"
      >
        <StyledInput
          disabled={true}
          type="checkbox"
        >
          <input
            className="emotion-0 emotion-1"
            disabled={true}
            type="checkbox"
          />
        </StyledInput>
        <StyledLabel>
          <span
            className="emotion-2 emotion-3"
          >
            Example
          </span>
        </StyledLabel>
      </label>
    </StyledCheckbox>
  </Checkbox>
</StyledHoc>
`;
